--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav {
   position: relative;
   width: 100%;
   height: 100%;
-  text-align: center;
+  /* text-align: center; */
   transition: transform 0.5s;
   transform-style: preserve-3d;
 }
@@ -104,7 +104,43 @@ nav {
   color: var(--black);
   transform: rotateY(180deg);
   border-radius: 12px;
+}
+.member-back-inner {
+  height: 90%;
+  margin: 18px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+
+  .member-nickname {
+    p {
+      font-size: 32px;
+      font-weight: bold;
+    }
+  }
+  .member-position {
+    margin-bottom: 18px;
+    p {
+      font-size: 18px;
+    }
+  }
+  .member-specialty {
+    margin-bottom: 12px;
+    p {
+      font-size: 20px;
+    }
+  }
+  .member-quote {
+    /* margin-bottom: 10px; */
+    p {
+      font-size: 20px;
+    }
+  }
+  .member-sosmed {
+    margin-top: auto;
+    a {
+      font-size: 18px;
+      color: var(--black);
+      text-decoration: none;
+    }
+  }
 }
