--- a/style.css
+++ b/style.css
@@ -17,6 +17,41 @@ html {
 /* NAV */
 /*  */
 nav {
+  position: fixed;
+  z-index: 1818;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+
+  .nav-container {
+    margin: 8px;
+
+    .nav-menu {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 5%;
+
+      li {
+        list-style: none;
+
+        a {
+          text-decoration: none;
+          letter-spacing: 2px;
+          color: var(--white);
+          font-weight: bold;
+          text-shadow: 1px 1px var(--black), -1px -1px var(--black),
+            1px -1px var(--black), -1px 1px var(--black);
+
+          img {
+            border-radius: 4px;
+            border: 1px solid var(--black);
+          }
+        }
+      }
+    }
+  }
 }
 /*  */
 /* ALL */
@@ -46,6 +81,7 @@ nav {
     .main-right-top {
       p {
         font-size: 50px;
+        letter-spacing: 8px;
         line-height: 58px;
         font-weight: bold;
       }
@@ -65,8 +101,20 @@ nav {
 /*  */
 .section-members {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+}
+.member-title {
+  p {
+    font-size: 50px;
+    letter-spacing: 8px;
+    font-weight: bold;
+    color: var(--white);
+  }
+}
+.member-members {
+  display: flex;
   gap: 20px;
 }
 .member-container {
